config/helloworld.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: helloworld
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: tutum/hello-world:latest
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: helloworld-svc
spec:
  type: ClusterIP
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 80
