config/kubesystem-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubesystem-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: dashboard.kubesystem.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard 
          servicePort: 80
